test/positive/feature_arbitraryreturn.java

public class feature_arbitraryreturn {
  public feature_arbitraryreturn() {}
  public int m(int x) {
    if (x==42) 
      return 87;
    else
      return 17;
  }
}

