test/negative/feature_choice.java

public class feature_choice {
  public feature_choice() {}
  public int m(int x) {
    return x==42 ? 87 : x;
  }
}

